@@ -3,7 +3,7 @@ Name:         extunix
 Version:      0.0.3
 #LicenseFile:  ?
 License:      LGPL-2.1 with OCaml linking exception
-Authors:      ygrek, Sylvain Le Gall, Stéphane Glondu, Kaustuv Chaudhuri, Joshua Smith, Niki Yoshiuchi, Gerd Stolpmann
+Authors:      ygrek, Sylvain Le Gall, Stéphane Glondu, Kaustuv Chaudhuri, Joshua Smith, Niki Yoshiuchi, Gerd Stolpmann, Goswin von Brederlow
 Copyrights:
               (C) 2010 ygrek,
               (C) 2009 Sylvain Le Gall,
@@ -11,7 +11,8 @@ Copyrights:
               (C) 2010 Stéphane Glondu,
               (C) 2005 Joshua Smith,
               (C) 2010 Niki Yoshiuchi,
-              (C) 2001 Gerd Stolpmann
+              (C) 2001 Gerd Stolpmann,
+              (C) 2012 Goswin von Brederlow
 Homepage:     http://extunix.forge.ocamlcore.org/
 BuildTools:   ocamlbuild, camlp4
 Plugins:      DevFiles (0.2), META (0.2)
@@ -43,7 +44,7 @@ Library extunix
             ioctl_siocgifconf.c, uname.c, fadvise.c, fallocate.c,
             tty_ioctl.c, unistd.c, stdlib.c, signalfd.c, ptrace.c,
             resource.c, mman.c, time.c, pts.c, execinfo.c, malloc.c
-  BuildDepends: unix
+  BuildDepends: unix, bigarray
 
 Executable test
   Path: test/
