@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 126704b96b6eb070a8bf711e985e2c1f) *)
+(* DO NOT EDIT (digest: 7e706ac6c97c806ea6b958e5f0757fa8) *)
 (*
    Regenerated by OASIS v0.2.0
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5134,7 +5134,8 @@ let setup_t =
                "(C) 2010 St\195\169phane Glondu";
                "(C) 2005 Joshua Smith";
                "(C) 2010 Niki Yoshiuchi";
-               "(C) 2001 Gerd Stolpmann"
+               "(C) 2001 Gerd Stolpmann";
+               "(C) 2012 Goswin von Brederlow"
             ];
           maintainers = [];
           authors =
@@ -5145,7 +5146,8 @@ let setup_t =
                "Kaustuv Chaudhuri";
                "Joshua Smith";
                "Niki Yoshiuchi";
-               "Gerd Stolpmann"
+               "Gerd Stolpmann";
+               "Goswin von Brederlow"
             ];
           homepage = Some "http://extunix.forge.ocamlcore.org/";
           synopsis = "Extended functions for OCaml Unix module";
@@ -5220,7 +5222,11 @@ let setup_t =
                       bs_install = [(OASISExpr.EBool true, true)];
                       bs_path = "src/";
                       bs_compiled_object = Best;
-                      bs_build_depends = [FindlibPackage ("unix", None)];
+                      bs_build_depends =
+                        [
+                           FindlibPackage ("unix", None);
+                           FindlibPackage ("bigarray", None)
+                        ];
                       bs_build_tools =
                         [ExternalTool "ocamlbuild"; ExternalTool "camlp4"];
                       bs_c_sources =
